# modern-cmake

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: CMakeLists.txt  EmbedSqlStrings.cmake  EmbedStrings.cmake  PrintLibData.cmake
docs/: blog.md
src/: CMakeLists.txt
src/paint/: CMakeLists.txt  README.md  main.cpp
src/renderer/: CMakeLists.txt  svg.cpp
src/renderer/include/demo/renderer/: CMakeLists.txt  svg.h
src/shapes/: CMakeLists.txt  README.md  circle.cpp  epsilon.h  rectangle.cpp  triangle.cpp
src/shapes/include/demo/shapes/: CMakeLists.txt  circle.h  point.h  rectangle.h  shapes.h  triangle.h
